# ece228-bearing-rul-neural-ode

./: .gitignore  README.md  pyproject.toml
RUL_Paper_Results_Assets/: README.md  results_and_analysis_section.tex
RUL_Paper_Results_Assets/tables/: ridge_feature_ablation_average.csv  tuned_wavelet_k40_protocol_summary.csv
RUL_XJTU_NeurIPS_Final/: README_UPLOAD.txt  final.tex  references.bib
processed/: metadata.csv
processed/splits/: cross_train_C1_C2_test_C3.json  cross_train_C1_C3_test_C2.json  cross_train_C2_C3_test_C1.json  literature_C1_test_C1_Bearing1_1.json  literature_C1_test_C1_Bearing1_2.json  literature_C1_test_C1_Bearing1_3.json  literature_C1_test_C1_Bearing1_4.json  literature_C1_test_C1_Bearing1_5.json  literature_C2_test_C2_Bearing2_1.json  literature_C2_test_C2_Bearing2_2.json  mixed_condition.json  (+11 more)
src/: build_metadata.py  config.py  conformal_uncertainty.py  evaluate.py  extract_features.py  extract_raw_downsample_features.py  feature_analysis.py  feature_setting_retraining.py  final_metrics_and_figures.py  final_supplementary_figures.py  fixed_wavelet_params_feature_settings_k40.py  k_sensitivity.py  make_final_splits.py  make_sequences.py  make_splits.py  missing_feature_robustness.py  mixed5fold_experiment.py  multiseed_experiment.py  paper_aligned_outputs.py  plot_results.py  rerun_k20_cross_mixed.py  run_all.py  sparse_observation.py  strict_method_v2.py  strict_wavelet_experiment.py  train_lstm.py  train_ml.py  train_ode.py  train_tcn.py  train_transformer.py  tune_three_feature_settings_k40.py  tune_wavelet_k40.py  utils.py
(+36 files in other folders)
