[project]
name = "ece228"
version = "0.1.0"
description = "Bearing remaining useful life prediction under operating condition shift"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.3",
]
